--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/MohammedAlsayed91/Zoo-Page-task2"> <span class="bi bi-github"></span></a>
+                      <a href="https://mohammedalsayed91.github.io/Zoo-Page-task2/"> <span class="bi bi-github"></span></a>
                     </div>
                   </div>
                 </div>
@@ -246,7 +246,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/MohammedAlsayed91/Job-Application-Html-CSS"> <span class="bi bi-github"></span></a>
+                      <a href="https://mohammedalsayed91.github.io/Job-Application-Html-CSS/"> <span class="bi bi-github"></span></a>
                     </div>
                   </div>
                 </div>
